nginx-ingress/controller-service.yaml
---
# Source: nginx-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.6.13
    component: "controller"
    heritage: Tiller
    release: release-name
  name: release-name-nginx-ingress-controller
spec:
  clusterIP: ""
  externalIPs:
  - <ip>
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: nginx-ingress
    component: "controller"
    release: release-name
  type: "LoadBalancer"
